# claude-usage-monitor

./: .gitignore  .release.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  LICENSE.md  README.md  SECURITY.md  build.py  debug_output.txt  pyproject.toml
.claude/: launch.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  platform_test.yml
.github/scripts/: maj_badges.py
.github/workflows/: badges.yml  build-windows.yml  publish.yml
assets/: claude-usage-monitor.service
badges/: pypi_downloads.json  pypi_state.json  stars.json
src/claude_usage_monitor/: __init__.py  api.py  autostart.py  cache.py  config.py  history.py  hotkeys.py  i18n.py  icon_generator.py  main.py  notifications.py  overlay.py  popup.py  screens.py  sounds.py  themes.py  tray.py  updater.py  utils.py
tests/: test_api.py  test_cache.py  test_config.py  test_history.py  test_notifications.py  test_tray.py  test_utils.py  test_version.py
tools/: capture_screenshots.py
