[project]
name = "claude-monitor-usage"
version = "2.1.1"
description = "Real-time Claude Pro/Max usage monitor — tray icon, overlay widget, notifications, mini mode, sparklines"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "All Rights Reserved"}
authors = [
    { name = "audi63" },
]
keywords = ["claude", "anthropic", "usage", "monitor", "tray", "overlay", "quota"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.31",
    "pystray>=0.19",
    "Pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/audi63/claude-usage-monitor"
Repository = "https://github.com/audi63/claude-usage-monitor"
Issues = "https://github.com/audi63/claude-usage-monitor/issues"
Changelog = "https://github.com/audi63/claude-usage-monitor/blob/main/CHANGELOG.md"

[project.optional-dependencies]
hotkeys = ["pynput>=1.7"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
claude-usage-monitor = "claude_usage_monitor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_usage_monitor"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
